--- a/videoCall.html
+++ b/videoCall.html
@@ -286,15 +286,17 @@
                
                 <div class = "connect">
                   <input type="checkbox" id="holdAlice" name="holdAlice" disabled />
-                  <label  for="holdAlice"><img id="changeHoldAlice"  src="images/cameraOff.png" alt="" width="10%" height="10%"/></label>
+                  <label  for="holdAlice"><img id="changeHoldAlice"  src="images/cameraOff.png" alt="" width="15%" height="15%"/></label>
                   <input type="checkbox" id="muteAlice" name="muteAlice" disabled />
-                  <label for="muteAlice"><img  id = "changeMuteAlice" src="images/mute.png" alt="" width="10%" height="10%"/></label>
+                  <label for="muteAlice"><img  id = "changeMuteAlice" src="images/mute.png" alt="" width="15%" height="15%"/></label>
+                  <a href="./texting.html"> 
+                    <button id="endAlice"  disabled> <img  src="images/end-call.webp" alt="buttonpng" width="30%" height="30%" /> </button>
+                  </a>
                 </div>
                 <ol>
                   <li><button id="connectAlice" disabled>Connect</button></li>
                   <li><button id="registerAlice" disabled>Register User</button></li>
                   <li><button id="beginAlice" disabled>Initiate Video Session</button></li>
-                  <li><button id="endAlice" disabled>End Video Session</button></li>
                   <li><button id="unregisterAlice" disabled>Unregister</button></li>
                   <li><button id="disconnectAlice" disabled>Disconnect</button></li>
                 </ol>
@@ -327,9 +329,11 @@
 
                 <div class = "connect">
                   <input type="checkbox" id="holdBob" name="holdBob" disabled />
-                  <label  for="holdBob"><img id="changeHoldBob"  src="images/cameraOff.png" alt="" width="10%" height="10%"/></label>
+                  <label  for="holdBob"><img id="changeHoldBob"  src="images/cameraOff.png" alt="" width="15%" height="15%"/></label>
                   <input type="checkbox" id="muteBob" name="muteBob" disabled />
-                  <label for="muteBob"><img  id = "changeMuteBob" src="images/mute.png" alt="" width="10%" height="10%"/></label>
+                  <label for="muteBob"><img  id = "changeMuteBob" src="images/mute.png" alt="" width="15%" height="15%"/></label>
+                  <button id="endBob" disabled><img  src="images/end-call.webp" alt="buttonpng" width="30%" height="30%" /></button>
+
                 </div>
                
                 <div>
@@ -339,7 +343,6 @@
                   <li><button id="connectBob" disabled>Connect</button></li>
                   <li><button id="registerBob" disabled>Register User</button></li>
                   <li><button id="beginBob" disabled>Initiate Video Session</button></li>
-                  <li><button id="endBob" disabled>End Video Session</button></li>
                   <li><button id="unregisterBob" disabled>Unregister</button></li>
                   <li><button id="disconnectBob" disabled>Disconnect</button></li>
                 </ol>
