--- a/register.html
+++ b/register.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <div id="btm">
-                    <button type="submit" class="submit-btn">Create Account</button>
+                    <button onclick= "location.href = './connect.html'; " type="submit" class="submit-btn">Create Account</button>
                     
                     <a href="./connect.html"> 
                         <p class="btm-text">
@@ -95,12 +95,6 @@
             </div>
         </form>
     </main>
-    <section class="outro-overlay disabled slideUp-animation">
-        <h1 class="company">Touch </h1>
-        <h1 class="outro-greeting">Thank's for signing up..!</h1>
-        <img src="./assets/images/shape.svg" alt="" class="shape">
-        <img src="./assets/images/signedUp.svg" alt="" id="signedUp-illustration" class="slideRight-animation">
-        
-    </section>
+   
 </body>
 </html>
