--- a/videoCall.html
+++ b/videoCall.html
@@ -243,7 +243,7 @@
                   <div class="chat-right-bottom-left">
                     <img
                       class="single-check-mark"
-                      src="images/single-check.svg"
+                      src="images/david-r-cook.jpg"
                     />
                     <span class="chat-message">Are you there??? 🤔🤔🤔</span>
                   </div>
